--- a/app/views/admin/tags/groupList.scala.html
+++ b/app/views/admin/tags/groupList.scala.html
@@ -88,7 +88,7 @@
 
     <div class="row-fluid">
         <div class="well">
-    <form method="post" id="J_batchForm" action="@controllers.admin.routes.Tags.batchGroups()">
+    <form method="post" id="J_batchForm" action="@controllers.admin.routes.Tags.batchGroups">
     <input type="hidden" id="J_url" name="url" value="">
     <div class="controls">
         <select id="J_select" name="action">
@@ -96,6 +96,7 @@
             <option value="0">批量更新排序</option>
             <option value="1">批量可见</option>
             <option value="2">批量不可见</option>
+            <option value="3">批量更新编码</option>
         </select>
         <button  class="btn btn-info" id="J_batchAction" data-toggle="modal" data-target="#J_batchModal" >批量处理 </button>
 
@@ -104,9 +105,10 @@
                 <thead>
                 <tr>
                     <th><input type="checkbox"  name="title-table-checkbox" /></th>
-                    <th>主题分类</th>
+                    <th>分类</th>
                     <th>ID</th>
                     <th>名称</th>
+                    <th>编码code</th>
                     <th>图片</th>
                     <th>排序</th>
                     <th>状态</th>
@@ -118,9 +120,10 @@
                  @for((group,i)<- page.items.view.zipWithIndex){
                  <tr id="@group.id.get">
                      <td><input type="checkbox" name="ids[@i]" value="@group.id.get" /></td>
-                     <td>@models.Cate(group.cid)</td>
+                     <td>@if(!group.cid.isEmpty){@models.Cate(group.cid.get)}</td>
                      <td>@group.id</td>
                      <td>@group.name</td>
+                     <td><input type="number" name="codes[@i]" value="@group.code"></td>
                      <td><img src="@group.pic"></td>
                      <td><input class="sortNum"  name="nums[@i]" value="@group.sortNum"></td>
                      <td>@if(group.isVisible){<span class="label label-success">yes</span>}else{<span class="label">no</span>}</td>
