--- a/app/views/users/home.scala.html
+++ b/app/views/users/home.scala.html
@@ -184,21 +184,7 @@ title =  author.name+" 在食美特的个人主页，食美特，爱美食爱生
     <div class="title">跟@if(!user.isEmpty && user.get.id==author.id){我}else{Ta}相关的标签</div>
     <ul class="clearfix">
 
-        <li><a class="ofh" href='@controllers.routes.Pages.faxian("美食","进口食品",1,1)'>进口食品</a></li>
-        <li class="focus"><a class="ofh" href='@controllers.routes.Pages.faxian("特产","台湾特产",1,1)'>台湾特产</a></li>
-        <li><a class="ofh" href='@controllers.routes.Pages.faxian("特产","新建特产",1,1)'>新建特产</a></li>
-        <li><a class="ofh" href='@controllers.routes.Pages.faxian("美食","粗粮",1,1)'>粗粮</a></li>
-        <li><a class="ofh" href='@controllers.routes.Pages.faxian("美食","手工美食",1,1)'>手工美食</a></li>
-        <li><a class="ofh" href='@controllers.routes.Pages.faxian("居家","摆件",1,1)'>摆件</a></li>
-        <li class="focus"><a class="ofh" href='@controllers.routes.Pages.faxian("居家","zakka",1,1)'>zakka</a></li>
-        <li><a class="ofh" href='@controllers.routes.Pages.faxian("居家","马克杯",1,1)'>马克杯</a></li>
-        <li><a class="ofh" href='@controllers.routes.Pages.faxian("居家","绿植",1,1)'>绿植</a></li>
-        <li class="focus"><a class="ofh" href='@controllers.routes.Pages.faxian("居家","小夜灯",1,1)'>小夜灯</a></li>
-        <li><a class="ofh" href='@controllers.routes.Pages.faxian("居家","陶瓷",1,1)'>陶瓷</a></li>
-        <li><a class="ofh" href='@controllers.routes.Pages.faxian("居家","收纳",1,1)'>收纳</a></li>
-        <li><a class="ofh" href='@controllers.routes.Pages.faxian("居家","床上用品",1,1)'>床上用品</a></li>
-        <li class="focus"><a class="ofh" href='@controllers.routes.Pages.faxian("好玩意","萌物",1,1)'>萌物</a></li>
-        <li class="focus"><a class="ofh" href='@controllers.routes.Pages.faxian("好玩意","创意",1,1)'>创意</a></li>
+       <!-- todo -->
     </ul>
 </div>
 
