adjust some bugs

--- a/app/views/pages/cookbook.scala.html
+++ b/app/views/pages/cookbook.scala.html
@@ -1,8 +1,8 @@
 @(user:Option[models.user.User])
 @views.html.template(
 user,
-nav="site",
-title =  "特色中国_食美特，爱美食爱生活"
+nav="cookbook",
+title =  "食美特，不一样的生活"
 )(css="/assets/css/template/china.css") {
 
 <div class="container clearfix" id="china">
