--- a/app/views/pages/faxian.scala.html
+++ b/app/views/pages/faxian.scala.html
@@ -7,7 +7,7 @@ title =  "发现喜欢_食美特，爱美食爱生活"
 <div class="container" id="faxian">
     <div class="tag-list clearfix" id="J_tags">
              <dl class="clearfix">
-                 <dt class='title  '>
+                 <dt class='title fs40 '>
                      <a href='@controllers.routes.Pages.faxian(cid,tagCode,1,1)'>@models.Cate(cid)</a>
                  </dt>
                  <dd>
