--- a/app/views/pages/worth.scala.html
+++ b/app/views/pages/worth.scala.html
@@ -1,7 +1,7 @@
 @(user:Option[models.user.User],month:Int,day:Int,list:List[models.goods.Goods] )
 @views.html.template(
 user,
-nav="choice",
+nav="worth",
 title = "小编精挑细选、严格控制品质的宝贝_食美特，爱美食爱生活"
 )(css="/assets/css/template/choice.css") {
 
