--- a/app/views/qqapps/fanjijie.scala.html
+++ b/app/views/qqapps/fanjijie.scala.html
@@ -58,8 +58,10 @@
 <div class="today-goods-item clearfix">
 
 
-    <a  href="javascript:void(0);" onclick="fusion2.nav.open({url : '@goods.clickUrl.get'}); return false;">
-        <img class="goods-item-img" src='@(goods.pic+"_310x310.jpg")' alt="@goods.name" width="300" height="@(goods.hwRate*300)"></a>
+    <a  href="javascript:void(0);" onclick="fusion2.nav.open({url:'@goods.clickUrl.get'}); return false;">
+        <img class="goods-item-img" src='@(goods.pic+"_310x310.jpg")' alt="@goods.name" width="300" height="@(goods.hwRate*300)">
+    </a>
+
     <div class="goods-item-info">
         <h2 class="goods-item-title">
               @goods.name
