--- a/public/assets/css/template/worth.css
+++ b/public/assets/css/template/worth.css
@@ -5,7 +5,7 @@
 * @depends:
 * Since:13-3-22下午7:19
 * ModifyTime :
-* ModifyContent:
+* ModifyContent:   for worth.scala.html
 * http://www.smeite.com/
 *
 */
