--- a/app/views/sites/site.scala.html
+++ b/app/views/sites/site.scala.html
@@ -46,26 +46,19 @@ title =  "食美特，不一样的生活"
                   <li><a><img width="45" height="45" src="/images/user/default.jpg"></a></li>
 
                   <li><a><img width="45" height="45" src="/images/user/default.jpg"></a></li>
+                  <li><a><img width="45" height="45" src="/images/user/default.jpg"></a></li>
 
               </ul>
           </div>
-           <div class="clear "></div>
-           <div class="member clearfix">
-                <h3>最近加入小站成员  <a class="more"> 查看全部</a> </h3>
-               <ul>
-                   <li><a><img width="40" height="40" src="/images/user/default.jpg"></a></li>
-                   <li><a><img width="40" height="40" src="/images/user/default.jpg"></a></li>
-                   <li><a><img width="40" height="40" src="/images/user/default.jpg"></a></li>
-                   <li><a><img width="40" height="40" src="/images/user/default.jpg"></a></li>
-                   <li class="last"><a><img width="40" height="40" src="/images/user/default.jpg"></a></li>
-               </ul>
 
-           </div>
            <div class="join clearfix">
-               <div class="love-num fl">已有1002 加入</div>
-               <div class="follow fr">
+               <div class="love-num">已有1002居民</div>
+               <div class="follow">
                    <a class="follow-btn"> + 加入小站</a>
                    <!-- <div class="followed-btn-big">已关注<span class="mr5 ml5">|</span><a rel="removefollow" data-followtype="5" data-usernick="duanyu200888" data-userid="3" href="javascript:;">取消</a></div>-->
+               </div>
+               <div class="invite">
+                   <a class="follow-btn"> 邀请好友</a>
                </div>
            </div>
        </div>
