--- a/public/assets/css/template/site.css
+++ b/public/assets/css/template/site.css
@@ -104,7 +104,9 @@
     height:180px;
  }
 .manager .owner{
-    padding-bottom:5px;
+    float: left;
+    padding-left: 8px;
+    width: 50px;
 }
 .manager .more,.recommend .more{
     float: right;
@@ -120,31 +122,33 @@
     width: 45px;
     height:45px;
     overflow: hidden;
-    margin-right: 6px;
-}
-.manager .member li {
-    float: left;
-    width: 40px;
-    height:40px;
-    overflow: hidden;
-    margin-right: 4px;
+    margin-bottom: 6px;
 }
 .manager li.last{
-    margin-right: 2px;
+    margin-bottom: 0;
 }
 .manager .join{
+    float: left;
+    width: 160px;
     margin-top: 15px;
 }
 .manager .join .love-num{
+    text-align: center;
     font-size: 16px;
     font-weight: bolder;
+    margin-bottom: 15px;
+}
+.manager .join .follow ,.manager .join .invite {
+    text-align: center;
+    margin-bottom: 15px;
 }
 .manager .join .follow-btn{
     width: 80px;
+    float: none;
 }
  .site-nav .recommend{
-     padding: 10px 10px 10px 0 ;
-     width: 170px;
+     padding: 10px ;
+     width: 160px;
      height:180px;
  }
  .recommend li{
@@ -162,11 +166,11 @@
  }
  .recommend li div {
      float: left;
-     width: 110px;
+     width: 100px;
  }
  .recommend li p{
      height: 25px;
-     width: 110px;
+     width: 100px;
      float: left;
      line-height: 25px;
  }
