--- a/app/views/sites/site.scala.html
+++ b/app/views/sites/site.scala.html
@@ -97,15 +97,31 @@ title =  "食美特，不一样的生活"
 
        </div>
    </div>
+
+    <!-- site media 包括 宝贝  图片 视频-->
+    <div class="site-media">
+        <div class="site-baobei">
+            <a class="add add-baobei">
+            <ins class="ico-baobei"></ins>
+                <p>添加宝贝</p>
+            </a>
+        </div>
+        <div class="site-pic">
+            <a class="add add-pic">
+                <ins class="ico-pic"></ins>
+                <p>添加图片</p>
+            </a>
+        </div>
+        <div class="site-video">
+            <a class="add add-video">
+                <ins class="ico-video"></ins>
+                <p>添加视频</p>
+            </a>
+        </div>
+    </div>
     <!-- site tools 包括 编辑 上传图片 上传视频-->
     <div class="site-tools">
 
-    </div>
-    <!-- site media 包括 宝贝  图片 视频-->
-    <div class="site-media">
-        <div class="site-baobei"></div>
-        <div class="site-pic"></div>
-        <div class="site-video"></div>
     </div>
        <!-- site 帖子 -->
     <div class="site-posts">
@@ -117,8 +133,9 @@ title =  "食美特，不一样的生活"
                     <a>最热</a>
                 </div>
                 <div class="edit"><a class="current"> + 发帖</a></div>
+                <i></i>
             </div>
-            <i></i>
+
         </div>
         <div class="clear"></div>
         <div class="bd clearfix">
