--- a/public/assets/css/template/site.css
+++ b/public/assets/css/template/site.css
@@ -448,3 +448,29 @@
 .last{
     margin-right: 0;
 }
+
+
+
+
+/* post  content*/
+.post{
+
+}
+.post .post-left{
+    float: left;
+    width: 180px;
+    background-color: #fff;
+    margin-right:20px ;
+}
+.post .post-main{
+    float: left;
+    width: 578px;
+    background-color: #fff;
+    padding: 15px 19px;
+    border: 1px solid #eee;
+    margin-right: 20px;
+}
+.post .post-right{
+    float: left;
+    width: 180px;
+}
